[package]
name = "antegen"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
readme = { workspace = true }
keywords = { workspace = true }
publish = false

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace]
resolver = "2"
members = ["clients/*", "crates/*", "programs/thread"]

[workspace.package]
version = "3.0.0"
authors = ["Antegen Maintainers <maintainers@antegen.xyz>"]
repository = "https://github.com/wuwei-labs/antegen"
homepage = "https://antegen.xyz/"
documentation = "https://docs.antegen.xyz/"
license = "MIT"
edition = "2021"
readme = "./README.md"
keywords = ["solana"]

[workspace.dependencies]
solana-cron = { path = "crates/cron" }
antegen-client = { path = "crates/client" }
antegen-processor = { path = "crates/processor" }
antegen-sdk = { path = "crates/sdk" }
antegen-submitter = { path = "crates/submitter" }
antegen-thread-program = { path = "programs/thread", features = [
    "no-entrypoint",
] }

anchor-lang = { version = "0.31.1" }
anchor-spl = { features = ["mint", "token"], version = "0.31.1" }
borsh = { version = "0.10.3" }

actix-cors = { version = "0.6.4" }
actix-web = { version = "4.3.1" }
agave-geyser-plugin-interface = { version = "~2.2" }
anyhow = { version = "1.0.94" }
async-nats = { version = "0.40.0" }
async_once = { version = "0.2.6" }
async-trait = { version = "0.1.83" }
base64 = { version = "0.22.1" }
bincode = { version = "1.3.3" }
bs58 = { version = "0.5.1" }
bugsnag = { version = "0.2.1" }
byte-unit = { version = "4.0.18" }
bzip2 = { version = "0.5.0" }
chrono = { version = "0.4.39", default-features = false, features = ["alloc"] }
clap = { version = "4.5.23", features = ["derive"] }
crossbeam = { version = "0.8" }
dashmap = { version = "5.5" }
dirs-next = { version = "2.0.0" }
futures = { version = "0.3.31" }
hex = { version = "0.4.3" }
getrandom = { version = "0.2.2", features = ["custom"] }
indicatif = { version = "0.17" }
lazy_static = { version = "1.5.0" }
libsql = { version = "0.9.5" }
log = { version = "0.4" }
nom = { version = "7.1.3" }
once_cell = { version = "1.20.2" }
proc-macro2 = { version = "1.0.95" }
prost = { version = "0.12.3" }
rand = { version = "0.8" }
rayon = { version = "1.7.0" }
regex = { version = "1.7.1" }
reqwest = { version = "0.11.20", features = ["blocking", "json"] }
serde = { version = "1.0.216" }
serde_json = { version = "1.0.133" }
serde_yaml = { version = "0.9.34" }
simple-error = { version = "0.3.1" }
solana-account = { version = "~2.2" }
solana-account-decoder = { version = "~2.2" }
solana-clap-utils = { version = "~2.2" }
solana-cli-config = { version = "~2.2" }
solana-client = { version = "~2.2" }
solana-connection-cache = { version = "~2.2" }
solana-logger = { version = "~2.2" }
solana-program = { version = "~2.2" }
solana-pubsub-client = { version = "~2.2" }
solana-quic-client = { version = "~2.2" }
solana-rpc-client-nonce-utils = { version = "~2.2" }
solana-tpu-client = { version = "~2.2" }
solana-sdk = { version = "~2.2" }
solana-transaction-status = { version = "~2.2" }
solana-zk-token-sdk = { version = "~2.2" }
spl-associated-token-account = { version = "6.0.0" }
spl-memo = { version = "6.0.0" }
spl-token = { version = "7.0.0" }
static-pubkey = { version = "1.0.3" }
tar = { version = "0.4" }
tempfile = { version = "3.19.1" }
termcolor = { version = "1.4.1" }
terminal-link = { version = "0.1.0" }
thiserror = { version = "2.0.7" }
toml = { version = "0.8" }
toml_datetime = { version = "0.6.8" }
tokio = { version = "1.29.1" }
url = { version = "2.5" }
version = { version = "3.0.0" }
winnow = { version = "0.4.1" }
env_logger = { version = "0.10" }
moka = { version = "0.12", features = ["future"] }
opentelemetry = { version = "0.21", features = ["metrics"] }
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio", "metrics"] }
opentelemetry-prometheus = { version = "0.14" }
prometheus = { version = "0.13" }
hyper = { version = "0.14", features = ["server", "tcp", "http1"] }
uuid = { version = "1.0", features = ["v4"] }
rustc_version = { version = "0.4.1" }
cargo_toml = { version = "0.15.0" }
cargo_metadata = { version = "0.19.1" }
