[package]
name = "antegen"
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true
readme = "./README.md"
keywords = ["solana"]
publish = false

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace]
resolver = "2"
members = [
    "crates/*",
    "cli/core",
    "cli/antegen",
    "cli/antegenctl",
    "plugin/geyser",
    "programs/fiber",
    "programs/reentrance-test",
    "programs/thread",
]
default-members = ["cli/antegen"]

[workspace.package]
authors = ["Antegen Maintainers <maintainers@antegen.xyz>"]
repository = "https://github.com/wuwei-labs/antegen"
homepage = "https://antegen.xyz/"
license = "AGPL-3.0-only"
edition = "2021"

# Workspace-wide rust lint configuration. `unexpected_cfgs` allows the
# `cfg(target_os = "solana")` predicate that Solana programs rely on.
[workspace.lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = [
  'cfg(target_os, values("solana"))',
] }

# Workspace-wide clippy lint configuration. Allowed lints fall into two
# categories that aren't worth fighting:
#   1. Lints that fire on Anchor's `#[program]` macro expansion
#      (`diverging_sub_expression`) — not actionable in user code.
#   2. Lints whose "fix" would change a public ix signature or a stable
#      API shape (`too_many_arguments`, `large_enum_variant`).
# Crates inherit via `[lints] workspace = true` in their Cargo.toml.
[workspace.lints.clippy]
diverging_sub_expression = "allow"
too_many_arguments = "allow"
large_enum_variant = "allow"

[workspace.dependencies]
# Internal workspace crates (each has its own version)
antegen-cli-core = { version = "6.1.0", path = "cli/core" }
antegen-cron = { version = "4.0.0", path = "crates/cron" }
antegen-client = { version = "5.2.0", path = "crates/client" }
antegen-geyser-plugin = { version = "5.1.0", path = "plugin/geyser" }
antegen-ws = { version = "0.1.0", path = "crates/ws" }
antegen-fiber-program = { version = "5.1.0", path = "programs/fiber", features = [
    "cpi",
] }
antegen-thread-program = { version = "5.1.0", path = "programs/thread", features = [
    "cpi",
] }

# Anchor
anchor-lang = "=1.0.0-rc.5"
anchor-spl = { version = "=1.0.0-rc.5", features = ["mint", "token"] }
borsh = "=1.6.0"

# Agave Geyser
agave-geyser-plugin-interface = "=3.1.4"

# Core dependencies
anyhow = "=1.0.100"
async-trait = "=0.1.89"
base64 = "=0.22.1"
bincode = "=1.3.3"
bs58 = "=0.5.1"
chrono = { version = "=0.4.42", default-features = false, features = ["alloc"] }
clap = { version = "=4.5.53", features = ["derive", "env"] }
dashmap = "=5.5.3"
dirs = "=5.0.1"
dirs-next = "=2.0.0"
env_logger = "=0.10.2"
flate2 = "=1.1.5"
futures = "=0.3.31"
getrandom = { version = "=0.2.16", features = ["custom"] }
hex = "=0.4.3"
hyper = { version = "=0.14.32", features = ["server", "tcp", "http1"] }
indexmap = "=2.13.0"
lazy_static = "=1.5.0"
loa-core = "=2.0.1"
log = "=0.4.29"
moka = { version = "=0.12.11", features = ["future"] }
nom = "=7.1.3"
once_cell = "=1.21.3"
proc-macro2 = "=1.0.103"
ractor = "=0.15.12"
rand = "=0.8.5"
rand_chacha = "=0.3.1"
rand_core = "=0.6.4"
regex = "=1.12.2"
reqwest = { version = "=0.12.28", default-features = false, features = [
    "blocking",
    "json",
    "rustls-tls",
] }
rust-embed = { version = "=8.9.0", features = [
    "include-exclude",
    "interpolate-folder-path",
] }
rustc_version = "=0.4.1"
seahash = "=4.1.0"
serde = "=1.0.228"
serde_json = "=1.0.145"
serde_yaml = "=0.9.34"
shellexpand = "=3.1.1"
signal-hook = "=0.3.18"
signal-hook-tokio = { version = "=0.3.1", features = ["futures-v0_3"] }
tar = "=0.4.44"
tempfile = "=3.23.0"
termcolor = "=1.4.1"
thiserror = "=2.0.17"
tokio = "=1.48.0"
tokio-test = "=0.4.4"
tokio-tungstenite = { version = "=0.28.0", default-features = false, features = [
    "connect",
    "rustls-tls-webpki-roots",
] }
toml = "=0.8.23"
toml_datetime = "=0.6.11"
url = "=2.5.7"
uuid = { version = "=1.19.0", features = ["v4", "serde"] }

# Solana dependencies - pinned to resolved versions
solana-account-decoder = "=3.1.4"
solana-account-decoder-client-types = "=3.1.4"
solana-address-lookup-table-interface = "=3.0.1"
solana-cli-config = "=3.1.4"
solana-compute-budget-interface = "=3.0.0"
solana-logger = "=3.0.0"
solana-nonce = "=3.0.0"
solana-program = "=3.0.0"
solana-sdk = "=3.0.0"
solana-system-interface = { version = "=3.0.0", features = ["bincode"] }
solana-transaction-status = "=3.1.4"

# SPL tokens - these resolve to interface crates
spl-associated-token-account = "=6.0.0"
spl-token = "=7.0.0"

# TPU client for direct validator transaction submission
solana-tpu-client-next = { version = "=3.1.4", features = [
    "agave-unstable-api",
] }
solana-rpc-client = "=3.1.4"
tokio-util = "=0.7"

[patch.crates-io]
service-manager = { git = "https://github.com/wuwei-labs/service-manager-rs", branch = "fix/launchd-status-detection" }
