[package]
name = "antegen-cli"
description = "Command line interface for Antegen"
documentation = "https://antegen.wuwei.dev/docs"
build = "build.rs"

version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
readme = { workspace = true }
keywords = { workspace = true }

[dependencies]
solana-cron = { workspace = true }
antegen-utils = { workspace = true }
antegen-plugin-utils= { workspace = true }
antegen-thread-program = { workspace = true }
antegen-network-program = { workspace = true }

anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
anyhow = { workspace = true }
bincode = { workspace = true }
bzip2 = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
dirs-next = { workspace = true }
indicatif = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
solana-account-decoder = { workspace = true }
solana-client = { workspace = true }
solana-clap-utils = { workspace = true }
solana-cli-config = { workspace = true }
solana-program = { workspace = true }
solana-sdk = { workspace = true }
spl-associated-token-account = { workspace = true }
spl-memo = { workspace = true }
spl-token = { workspace = true }
tar = { workspace = true }
thiserror = { workspace = true }
termcolor = { workspace = true }

[[bin]]
name = "antegen"
path = "src/main.rs"

[build-dependencies]
cargo_metadata = "=0.19.1"
cargo_toml = "0.15.0"
