[package]
name = "clockwork-cli"
version = "1.0.0"
edition = "2021"
description = "Command line interface for Clockwork"
license = "AGPL-3.0-or-later"
homepage = "https://clockwork.wuwei.dev"
repository = "https://github.com/wuwei-labs/clockwork"
documentation = "https://clockwork.wuwei.dev/docs"
readme = "./README.md"
keywords = ["solana"]
build = "build.rs"

[dependencies]
clockwork-cron = { path = "../cron", version = "=1.0.0" }
clockwork-utils = { path = "../utils", version = "=1.0.0" }
clockwork-relayer-api = { path = "../relayer/api", version = "=1.0.0" }
clockwork-plugin-utils= { path = "../plugin/utils", version = "=1.0.0" }
clockwork-thread-program = { path = "../programs/thread", version = "=1.0.0", features = ["no-entrypoint"] }
clockwork-network-program = { path = "../programs/network", version = "=1.0.0", features = ["no-entrypoint"] }
clockwork-webhook-program = { path = "../programs/webhook", version = "=1.0.0", features = ["no-entrypoint"] }

anchor-lang = { git = "https://github.com/coral-xyz/anchor", rev = "0453672" }
anchor-spl = { features = ["mint", "token"], git = "https://github.com/coral-xyz/anchor", rev = "0453672" }
anyhow = "1.0.94"
bincode = "1.3.3"
bzip2 = "0.5.0"
clap = { version = "4.5.23", features = ["derive"] }
chrono = { version = "0.4.39", default-features = false, features = ["alloc"] }
dirs-next = "2.0.0"
indicatif = "0.17"
reqwest = { version = "0.11.20", features = ["blocking", "json"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
serde_yaml = "0.9.34"
solana-account-decoder = "=2.1.6"
solana-client = "=2.1.6"
solana-clap-utils = "=2.1.6"
solana-cli-config = "=2.1.6"
solana-sdk = "=2.1.6"
spl-associated-token-account = "6.0.0"
spl-memo = "6.0.0"
spl-token = "7.0.0"
tar = "0.4"
thiserror = "2.0.7"
termcolor = "1.4.1"

[[bin]]
name = "clockwork"
path = "src/main.rs"

[build-dependencies]
cargo_metadata = "=0.19.1"
cargo_toml = "0.15.0"
