[package]
name = "solana-cron"
description = "A cron expression parser that's safe to use in the Solana runtime"

version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
readme = { workspace = true }
keywords = { workspace = true }

[lib]
name = "solana_cron"

[dependencies]
chrono = { workspace = true }
nom = { workspace = true }
once_cell = { workspace = true }
