[package]
name = "clockwork-cron"
version = "1.0.0"
edition = "2021"
description = "A cron expression parser that's safe to use in the Solana runtime"
license = "AGPL-3.0-or-later"
homepage = "https://clockwork.wuwei.dev"
repository = "https://github.com/wuwei-labs/clockwork"
documentation = "https://clockwork.wuwei.dev/docs"
readme = "./README.md"
keywords = ["solana"]

[lib]
name = "clockwork_cron"

[dependencies]
nom = "7.1.3"
once_cell = "1.20.2"
chrono = { version = "0.4.39", default-features = false, features = ["alloc"] }
