[package]
name = "antegen-plugin"
description = "Antegen plugin for Solana validators"
build = "build.rs"
publish = false

version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
readme = { workspace = true }
keywords = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]
name = "antegen_plugin"

[dependencies]
solana-cron = { workspace = true }
antegen-utils = { workspace = true }
antegen-plugin-utils= { workspace = true }
antegen-thread-program = { workspace = true }
antegen-network-program = { workspace = true }

anchor-lang = { workspace = true }

agave-geyser-plugin-interface = { workspace = true }
async_once = { workspace = true }
async-trait = { workspace = true }
bincode = { workspace = true }
bs58 = { workspace = true }
bugsnag = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
prost = { workspace = true }
pyth-sdk-solana = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
simple-error = { workspace = true }
solana-account-decoder = { workspace = true }
solana-client = { workspace = true }
solana-logger = { workspace = true }
solana-program = { workspace = true }
solana-quic-client = { workspace = true }
solana-sdk = { workspace = true }
solana-transaction-status = { workspace = true }
static-pubkey = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[build-dependencies]
cargo_metadata = "=0.19.1"
rustc_version = "0.4.1"
cargo_toml = "0.15.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
