[package]
name = "clockwork_plugin"
version = "1.0.0"
edition = "2021"
# this needs to match whatever solana uses!
rust-version = "1.79.0"
description = "Clockwork plugin for Solana validators"
license = "AGPL-3.0-or-later"
homepage = "https://clockwork.wuwei.dev"
repository = "https://github.com/wuwei-labs/clockwork"
documentation = "https://clockwork.wuwei.dev/docs"
readme = "./README.md"
keywords = ["solana"]
build = "build.rs"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
name = "clockwork_plugin"

[dependencies]
clockwork-cron = { path = "../cron", version = "=1.0.0" }
clockwork-utils = { path = "../utils", version = "=1.0.0" }
clockwork-relayer-api = { path = "../relayer/api", version = "=1.0.0" }
clockwork-plugin-utils= { path = "../plugin/utils", version = "=1.0.0" }
clockwork-thread-program = { path = "../programs/thread", version = "=1.0.0", features = ["no-entrypoint"] }
clockwork-network-program = { path = "../programs/network", version = "=1.0.0", features = ["no-entrypoint"] }
clockwork-webhook-program = { path = "../programs/webhook", version = "=1.0.0", features = ["no-entrypoint"] }

anchor-lang = { git = "https://github.com/coral-xyz/anchor", rev = "0453672" }
async_once = "0.2.6"
async-trait = "0.1.83"
bincode = "1.3.3"
bs58 = "0.5.1"
bugsnag = "0.2.1"
chrono = { version = "0.4.31", default-features = false, features = ["alloc"] }
lazy_static = "1.5.0"
log = "0.4"
prost = "0.12.3"
pyth-sdk-solana = "0.10"
reqwest = "0.11.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simple-error = "0.3.1"
solana-account-decoder = "2.1.6"
solana-client = "2.1.6"
solana-quic-client = "2.1.6"
solana-logger = "2.1.6"
solana-program = "2.1.6"
solana-sdk = "2.1.6"
solana-transaction-status = "2.1.6"
agave-geyser-plugin-interface = "2.1.6"
thiserror = "1.0.65"
tokio = "1.29.1"
futures = "0.3.31"
static-pubkey = "1.0.3"

[build-dependencies]
cargo_metadata = "=0.19.1"
rustc_version = "0.4.1"
cargo_toml = "0.15.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
