[package]
name = "clockwork-relayer"
version = "1.0.0"
edition = "2021"
description = "Clockwork relayer for webhook requests"
license = "AGPL-3.0-or-later"
homepage = "https://clockwork.wuwei.dev"
repository = "https://github.com/wuwei-labs/clockwork"
documentation = "https://clockwork.wuwei.dev/docs"
readme = "./README.md"
keywords = ["solana"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clockwork-webhook-program = { path = "../programs/webhook", version = "=1.0.0" }
clockwork-relayer-api = { path = "api", version = "=1.0.0" }

actix-cors = "0.6.4"
actix-web = "4.3.1"
anchor-lang = "0.29.0"
byte-unit = "4.0.18"
lazy_static = "1.4.0"
reqwest = "0.11.14"
serde = "1.0.152"
serde_json = "1.0.94"
solana-client = "2.1.6"
solana-zk-token-sdk = "2.1.6"
solana-sdk = "2.1.6"
tokio = "1.26.0"
bincode = "1.3.3"
rayon = "1.7.0"
regex = "1.7.1"
