[package]
name = "antegen-sdk"
description = "An SDK for building automated programs on Solana"

version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
readme = { workspace = true }
keywords = { workspace = true }

[lib]
name = "antegen_sdk"

[dependencies]
antegen-thread-program = { workspace = true, features = ["cpi"] }

anchor-lang = { workspace = true }

chrono = { workspace = true }
nom = { workspace = true }
once_cell = { workspace = true }

[features]
default = []
