[package]
name = "clockwork-sdk"
version = "1.0.0"
edition = "2021"
description = "An SDK for building automated programs on Solana"
license = "AGPL-3.0-or-later"
homepage = "https://clockwork.wuwei.dev"
repository = "https://github.com/wuwei-labs/clockwork"
documentation = "https://clockwork.wuwei.dev/docs"
readme = "./README.md"
keywords = ["solana"]

[lib]
name = "clockwork_sdk"

[dependencies]
clockwork-thread-program = { path = "../programs/thread", features = ["cpi"], version = "=1.0.0" }

anchor-lang = { git = "https://github.com/coral-xyz/anchor", rev = "0453672" }
chrono = { version = "0.4.39", default-features = false, features = ["alloc"] }
nom = "~7"
once_cell = "1.20.2"

[features]
default = []
