[package]
name = "clockwork-utils"
version = "1.0.0"
edition = "2021"
description = "Tools for building blocks on Solana"
license = "AGPL-3.0-or-later"
homepage = "https://clockwork.wuwei.dev"
repository = "https://github.com/wuwei-labs/clockwork"
documentation = "https://clockwork.wuwei.dev/docs"
readme = "./README.md"
keywords = ["solana"]

[lib]
name = "clockwork_utils"

[dependencies]
anchor-lang = { git = "https://github.com/coral-xyz/anchor", rev = "0453672" }
base64 = "~0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
static-pubkey = "1.0.3"
