[package]
name = "antegen-utils"
description = "Tools for building blocks on Solana"

version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
readme = { workspace = true }
keywords = { workspace = true }

[lib]
name = "antegen_utils"

[dependencies]
anchor-lang = { workspace = true }
base64 = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
static-pubkey = { workspace = true }
terminal-link = { workspace = true }
