[package]
name = "antegen-cli"
version = "6.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI for Antegen - Solana automation and scheduling"
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords = ["solana", "automation", "scheduler", "blockchain"]
categories = ["command-line-utilities", "cryptography::cryptocurrencies"]

[[bin]]
name = "antegen"
path = "src/main.rs"

[dependencies]
antegen-cli-core = { workspace = true }
antegen-client = { workspace = true }
antegen-thread-program = { workspace = true }
antegen-fiber-program = { workspace = true }
anchor-lang = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
log = { workspace = true }
dirs = { workspace = true }
solana-sdk = { workspace = true }

[features]
dev = ["antegen-cli-core/dev"]
prod = ["antegen-cli-core/prod"]
