[package]
name = "antegenctl"
version = "6.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Antegen system controller - node version management and service control"
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "antegenctl"
path = "src/main.rs"

[dependencies]
antegen-cli-core = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
log = { workspace = true }

[features]
dev = ["antegen-cli-core/dev"]
prod = ["antegen-cli-core/prod"]
