[package]
name = "antegen-client-carbon"
version = "3.0.0"
edition = "2021"

[[bin]]
name = "antegen-carbon"
path = "src/main.rs"

[dependencies]
# Carbon framework datasources
carbon-core = "0.9.1"
carbon-rpc-program-subscribe-datasource = "0.9.1"
carbon-helius-atlas-ws-datasource = "0.9.1"
carbon-yellowstone-grpc-datasource = "0.9.1"

# Antegen crates
antegen-adapter = { path = "../../crates/adapter" }
antegen-client = { path = "../../crates/client" }
antegen-processor = { path = "../../crates/processor" }
antegen-thread-program = { path = "../../programs/thread" }
antegen-submitter = { path = "../../crates/submitter" }

# Workspace dependencies
tokio = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
solana-sdk = { workspace = true }
solana-program = { workspace = true }
solana-client = { workspace = true }
solana-account = { workspace = true }
crossbeam = { workspace = true }
anchor-lang = { workspace = true }

# Additional specific dependencies
async-trait = { workspace = true }
futures = { workspace = true }
serde_json = { workspace = true }

# Required by Carbon datasources (yellowstone types)
yellowstone-grpc-proto = "6.0.0"