[package]
name = "antegen-client-carbon"
version = "3.0.0"
edition = "2021"

[[bin]]
name = "antegen-carbon"
path = "src/main.rs"

[dependencies]
# Carbon framework datasources - removed unused ones

# Antegen crates
antegen-client = { path = "../../crates/client", features = ["carbon"] }
antegen-processor = { path = "../../crates/processor" }
antegen-submitter = { path = "../../crates/submitter" }

# Workspace dependencies
tokio = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
solana-sdk = { workspace = true }

# Additional specific dependencies - removed unused ones