[package]
name = "antegen-client-geyser"
description = "Antegen geyser plugin for Solana validators"
build = "build.rs"
publish = false

version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
readme = { workspace = true }
keywords = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]
name = "antegen_client_geyser"

[dependencies]
solana-cron = { workspace = true }
antegen-adapter = { workspace = true }
antegen-client = { workspace = true }
antegen-processor = { workspace = true }
antegen-submitter = { workspace = true }
antegen-thread-program = { workspace = true }

anchor-lang = { workspace = true }

agave-geyser-plugin-interface = { workspace = true }
anyhow = { workspace = true }
async-nats = { workspace = true }
async_once = { workspace = true }
async-trait = { workspace = true }
bincode = { workspace = true }
base64 = { workspace = true }
bs58 = { workspace = true }
bugsnag = { workspace = true }
chrono = { workspace = true }
crossbeam = { workspace = true }
futures = { workspace = true }
lazy_static = { workspace = true }
libsql = { workspace = true }
log = { workspace = true }
prost = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
simple-error = { workspace = true }
solana-account-decoder = { workspace = true }
solana-client = { workspace = true }
solana-logger = { workspace = true }
solana-program = { workspace = true }
solana-rpc-client-nonce-utils = { workspace = true }
solana-quic-client = { workspace = true }
solana-sdk = { workspace = true }
solana-transaction-status = { workspace = true }
static-pubkey = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

# Metrics dependencies (for exposing, not collecting)
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-prometheus = { workspace = true }
prometheus = { workspace = true }
hyper = { workspace = true }

[build-dependencies]
cargo_metadata = { workspace = true }
rustc_version = { workspace = true }
cargo_toml = { workspace = true }

[features]
default = []

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
