[package]
name = "antegen-client-rpc"
version = "3.0.0"
edition = "2021"

[[bin]]
name = "antegen-rpc"
path = "src/main.rs"

[dependencies]
# Removed unused dependencies

# Antegen crates
antegen-client = { path = "../../crates/client" }
antegen-processor = { path = "../../crates/processor" }
antegen-submitter = { path = "../../crates/submitter" }

# Workspace dependencies
tokio = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
solana-sdk = { workspace = true }

# Additional specific dependencies - removed unused ones