[package]
name = "antegen-cli"
description = "Command line interface for Antegen"
documentation = "https://antegen.wuwei.dev/docs"
build = "build.rs"

version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
readme = { workspace = true }
keywords = { workspace = true }

[features]
mainnet = []
default = []

[dependencies]
solana-cron = { workspace = true }
antegen-sdk = { workspace = true }
# antegen-test-program = { workspace = true }

anchor-lang = { workspace = true }
anyhow = { workspace = true }
bincode = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
dialoguer = { workspace = true }
dirs-next = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
solana-client = { workspace = true }
solana-cli-config = { workspace = true }
solana-program = { workspace = true }
solana-sdk = { workspace = true }
thiserror = { workspace = true }
termcolor = { workspace = true }
once_cell = { workspace = true }
rand = { workspace = true }
pmdaemon = "=0.1.4"
tokio = { workspace = true, features = ["full"] }
reqwest = { workspace = true }

[[bin]]
name = "antegen"
path = "src/main.rs"

[build-dependencies]
cargo_metadata = "=0.19.1"
cargo_toml = "=0.15.3"
