[package]
name = "antegen-cli"
version = "4.0.0"
authors = ["Antegen Maintainers <maintainers@antegen.xyz>"]
edition = "2021"
license = "MIT"
description = "CLI for Antegen - Solana automation and scheduling"
repository = "https://github.com/wuwei-labs/antegen"
homepage = "https://antegen.xyz/"
documentation = "https://docs.antegen.xyz/"
keywords = ["solana", "automation", "scheduler", "blockchain"]
categories = ["command-line-utilities", "cryptography::cryptocurrencies"]
readme = "README.md"

[[bin]]
name = "antegen"
path = "src/main.rs"

[dependencies]
antegen-client = { version = "4.0.0", path = "../client" }
antegen-thread-program = { version = "4.0.0", path = "../../programs/thread", features = ["cpi"] }
anchor-lang = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
log = { workspace = true }
dirs = { workspace = true }
env_logger = { workspace = true }
solana-sdk = { workspace = true }
solana-cli-config = { workspace = true }
solana-system-interface = { workspace = true }
reqwest = { workspace = true }
shellexpand = { workspace = true }
toml = { workspace = true }
tar = { workspace = true }
flate2 = { workspace = true }
tempfile = { workspace = true }

[build-dependencies]

[features]
dev = []

[dev-dependencies]
tempfile = { workspace = true }
